--- a/ref/msal-common/classes/_src_response_authenticationresult_.authenticationresult.html
+++ b/ref/msal-common/classes/_src_response_authenticationresult_.authenticationresult.html
@@ -70,8 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>TODO: add descriptions, sending back to user
-						Result returned from the authority&#39;s token endpoint.</p>
+						<p>Result returned from the authority&#39;s token endpoint.</p>
 					</div>
 				</div>
 			</section>
