--- a/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
+++ b/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
@@ -90,7 +90,8 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>TODO:</p>
+							<p>AuthorizationCodeUrlRequest: Request object passed by user to retrieve a Code from the
+							server (first leg of authorization code grant flow)</p>
 						</div>
 					</div>
 				</section>
