--- a/ref/msal-common/modules/_src_request_devicecoderequest_.html
+++ b/ref/msal-common/modules/_src_request_devicecoderequest_.html
@@ -90,8 +90,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>TODO:
-							Parameters for Oauth2 device code flow.</p>
+							<p>Parameters for Oauth2 device code flow.</p>
 						</div>
 					</div>
 				</section>
