--- a/ref/msal-common/modules/_src_request_refreshtokenrequest_.html
+++ b/ref/msal-common/modules/_src_request_refreshtokenrequest_.html
@@ -85,13 +85,16 @@
 					<div class="tsd-signature tsd-kind-icon">Refresh<wbr>Token<wbr>Request<span class="tsd-signature-symbol">:</span> <a href="_src_request_baseauthrequest_.html#baseauthrequest" class="tsd-signature-type">BaseAuthRequest</a><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-symbol">{ </span>refreshToken<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/request/RefreshTokenRequest.ts#L16">src/request/RefreshTokenRequest.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/request/RefreshTokenRequest.ts#L13">src/request/RefreshTokenRequest.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>TODO:</p>
+							<p>RefreshTokenRequest</p>
 						</div>
+						<ul>
+							<li>refreshToken:            A refresh token returned from a previous request to the Identity provider.</li>
+						</ul>
 					</div>
 				</section>
 			</section>
