--- a/ref/msal-common/modules/_src_config_clientconfiguration_.html
+++ b/ref/msal-common/modules/_src_config_clientconfiguration_.html
@@ -107,7 +107,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>AuthOptions: Use this to configure the auth options in the Configuration object</p>
+							<p>Use this to configure the auth options in the Configuration object</p>
 						</div>
 						<ul>
 							<li>clientId                    - Client ID of your app registered with our Application registration portal : <a href="https://portal.azure.com/#blade/Microsoft_AAD_IAM/ActiveDirectoryMenuBlade/RegisteredAppsPreview">https://portal.azure.com/#blade/Microsoft_AAD_IAM/ActiveDirectoryMenuBlade/RegisteredAppsPreview</a> in Microsoft Identity Platform</li>
@@ -143,7 +143,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>ClientConfiguration: Use the configuration object to configure MSAL Modules and initialize the base interfaces for MSAL.</p>
+							<p>Use the configuration object to configure MSAL Modules and initialize the base interfaces for MSAL.</p>
 						</div>
 						<p>This object allows you to configure important elements of MSAL functionality:</p>
 						<ul>
@@ -186,18 +186,12 @@
 					<div class="tsd-signature tsd-kind-icon">Library<wbr>Info<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>cpu<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>os<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>sku<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>version<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L94">src/config/ClientConfiguration.ts:94</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L90">src/config/ClientConfiguration.ts:90</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>LibraryInfo: Use this to configure the telemetry info about the library</p>
-							<ul>
-								<li>sku                            -</li>
-								<li>version                        -</li>
-								<li>cpu                            -</li>
-								<li>os                             -</li>
-							</ul>
+							<p>Use this to configure the telemetry info about the library</p>
 						</div>
 					</div>
 					<div class="tsd-type-declaration">
@@ -229,7 +223,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>LoggerOptions: Use this to configure the logging that MSAL does, by configuring logger options in the Configuration object</p>
+							<p> Use this to configure the logging that MSAL does, by configuring logger options in the Configuration object</p>
 						</div>
 						<ul>
 							<li>loggerCallback                - Callback for logger</li>
@@ -263,7 +257,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>SystemOptions: Use this to configure the library specific options in the Configuration object</p>
+							<p>Use this to configure the library specific options in the Configuration object</p>
 						</div>
 						<ul>
 							<li>tokenRenewalOffsetSeconds    - Sets the window of offset needed to renew the token before expiry</li>
@@ -293,7 +287,7 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>TelemetryOptions: Use this to configure the telemetry options in the Configuration object</p>
+							<p>Use this to configure the telemetry options in the Configuration object</p>
 						</div>
 						<ul>
 							<li>applicationName              - Name of the consuming apps application</li>
@@ -326,7 +320,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L165">src/config/ClientConfiguration.ts:165</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L161">src/config/ClientConfiguration.ts:161</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -424,7 +418,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>SYSTEM_<wbr>OPTIONS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L108">src/config/ClientConfiguration.ts:108</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L104">src/config/ClientConfiguration.ts:104</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -433,7 +427,7 @@
 						<div class="tsd-signature tsd-kind-icon">telemetry<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> = null</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L110">src/config/ClientConfiguration.ts:110</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L106">src/config/ClientConfiguration.ts:106</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -443,7 +437,7 @@
 						<div class="tsd-signature tsd-kind-icon">token<wbr>Renewal<wbr>Offset<wbr>Seconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = DEFAULT_TOKEN_RENEWAL_OFFSET_SEC</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L109">src/config/ClientConfiguration.ts:109</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L105">src/config/ClientConfiguration.ts:105</a></li>
 							</ul>
 						</aside>
 					</section>
