--- a/ref/msal-common/modules/_src_request_silentflowrequest_.html
+++ b/ref/msal-common/modules/_src_request_silentflowrequest_.html
@@ -92,9 +92,9 @@
 						<div class="lead">
 							<p>SilentFlow parameters passed by the user to retrieve credentials silently</p>
 							<ul>
-								<li>account:               Account entity to lookup the credentials</li>
-								<li>forceRefresh:          Forces silent requests to make network calls if true</li>
-								<li>correlationId:         GUID set by the user to trace the request</li>
+								<li>account               - Account entity to lookup the credentials</li>
+								<li>forceRefresh          - Forces silent requests to make network calls if true</li>
+								<li>correlationId         - GUID set by the user to trace the request</li>
 							</ul>
 						</div>
 					</div>
