Update msal-common types

--- a/ref/msal-common/modules/_src_account_accountinfo_.html
+++ b/ref/msal-common/modules/_src_account_accountinfo_.html
@@ -89,6 +89,15 @@
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Account object with the following signature:</p>
+							<ul>
+								<li>homeAccountId          - Home account identifier for this account object</li>
+								<li>environment            - Entity which issued the token represented as a full host of it (e.g. login.microsoftonline.com)</li>
+								<li>tenantId               - Full tenant or organizational id that this account belongs to</li>
+								<li>username               - preferred_username claim of the id_token that represents this account</li>
+							</ul>
+						</div>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
