--- a/ref/msal-common/classes/_src_response_authenticationresult_.authenticationresult.html
+++ b/ref/msal-common/classes/_src_response_authenticationresult_.authenticationresult.html
@@ -71,6 +71,20 @@
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
 						<p>Result returned from the authority&#39;s token endpoint.</p>
+						<ul>
+							<li>uniqueId               - <code>oid</code> or <code>sub</code> claim from ID token</li>
+							<li>tenantId               - <code>tid</code> claim from ID token</li>
+							<li>scopes                 - Scopes that are validated for the respective token</li>
+							<li>account                - An account object representation of the currently signed-in user</li>
+							<li>idToken                - Id token received as part of the response</li>
+							<li>idTokenClaims          - MSAL-relevant ID token claims</li>
+							<li>accessToken            - Access token received as part of the response</li>
+							<li>fromCache              - Boolean denoting whether token came from cache</li>
+							<li>expiresOn              - Javascript Date object representing relative expiration of access token</li>
+							<li>extExpiresOn           - Javascript Date object representing extended relative expiration of access token in case of server outage</li>
+							<li>state                  - Value passed in by user in request</li>
+							<li>familyId               - Family ID identifier, usually only used for refresh tokens</li>
+						</ul>
 					</div>
 				</div>
 			</section>
@@ -114,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">access<wbr>Token<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L19">src/response/AuthenticationResult.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L31">src/response/AuthenticationResult.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +138,7 @@
 					<div class="tsd-signature tsd-kind-icon">account<span class="tsd-signature-symbol">:</span> <a href="../modules/_src_account_accountinfo_.html#accountinfo" class="tsd-signature-type">AccountInfo</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L16">src/response/AuthenticationResult.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L28">src/response/AuthenticationResult.ts:28</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +148,7 @@
 					<div class="tsd-signature tsd-kind-icon">expires<wbr>On<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Date</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L21">src/response/AuthenticationResult.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L33">src/response/AuthenticationResult.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">ext<wbr>Expires<wbr>On<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Date</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L22">src/response/AuthenticationResult.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L34">src/response/AuthenticationResult.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +168,7 @@
 					<div class="tsd-signature tsd-kind-icon">family<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L24">src/response/AuthenticationResult.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L36">src/response/AuthenticationResult.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +178,7 @@
 					<div class="tsd-signature tsd-kind-icon">from<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L20">src/response/AuthenticationResult.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L32">src/response/AuthenticationResult.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +188,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<wbr>Token<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L17">src/response/AuthenticationResult.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L29">src/response/AuthenticationResult.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +198,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<wbr>Token<wbr>Claims<span class="tsd-signature-symbol">:</span> <a href="../modules/_src_utils_msaltypes_.html#stringdict" class="tsd-signature-type">StringDict</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L18">src/response/AuthenticationResult.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L30">src/response/AuthenticationResult.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +208,7 @@
 					<div class="tsd-signature tsd-kind-icon">scopes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L15">src/response/AuthenticationResult.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L27">src/response/AuthenticationResult.ts:27</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -204,7 +218,7 @@
 					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L23">src/response/AuthenticationResult.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L35">src/response/AuthenticationResult.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -214,7 +228,7 @@
 					<div class="tsd-signature tsd-kind-icon">tenant<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L14">src/response/AuthenticationResult.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L26">src/response/AuthenticationResult.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -224,7 +238,7 @@
 					<div class="tsd-signature tsd-kind-icon">unique<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L13">src/response/AuthenticationResult.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/AuthenticationResult.ts#L25">src/response/AuthenticationResult.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
